fix(index html/css): gap in section your work

--- a/src/blocks/page/__back-img/_circie-work/page__back-img_circie-work.scss
+++ b/src/blocks/page/__back-img/_circie-work/page__back-img_circie-work.scss
@@ -2,5 +2,5 @@
     inset-block-start: -191px;
     background-image: url('./images/png/circle-section-work.png');
     width: 502px;
-    height: 837px;
+    height: 761px;
 }
